--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "server": "nodemon server.js",
     "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "author": "zareel",
   "license": "ISC",
