--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix ./client",
+    "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "author": "zareel",
