--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "proxy": "http://localhost:4000",
+  "proxy": "https://mern-stack-authentication-backend.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
