--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
+    "build":"npm install --prefix ./client && npm run build --prefix ./client && npm install"
+
+    
   },
   "author": "zareel",
   "license": "ISC",
